<resources xmlns:tools="http://schemas.android.com/tools">


    <string name="app_name">Stonks</string>
    <string name="title_home">Home</string>
    <string name="title_stocklist">Stocks</string>
    <string name="title_notifications">Notifications</string>
    <string name="searchHint">Search</string>
    <string name="title_stock">Stock</string>
    <string name="currencyName">USD</string>
    <string name="days1string">1d</string>
    <string name="days5string">5d</string>
    <string name="months1string">1m</string>
    <string name="years1string">1y</string>
    <string name="years5string">5y</string>

    <string name="roundTo2Digits">%.2f</string>
    <string name="priceOverText">Price over %1$.1f, currently at %2$.1f</string>
    <string name="priceUnderText">Price under %1$.1f, currently at %2$.1f</string>
    <string name="percent">%.2f\%%</string>

    <string name="notificationTitle">Stonks Alert</string>
    <string name="delete_notifications_title">Delete notifications</string>
    <string name="delete_all_notifications">Delete all notifications?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="this_action_will_permanently_delete_all_the_notifications">This action will permanently delete all the notifications.</string>
    <string name="reminders_for">Reminders for</string>
    <string name="reminder_symbol_placeholder">AMD</string>
    <string name="add_reminder">Add reminder</string>
    <string name="placeholder_for_setting_flags_in_dialog">placeholder for setting flags in dialog</string>
    <string name="close_dialog">Close Dialog</string>
    <string name="placeholderSymbol">AMD</string>
    <string name="placeholderCompanyName">Advanced Micro Devices</string>
    <string name="placeholder_price">86.40</string>
    <string name="placeholder_percent">-3.94%</string>
    <string name="placeholder_change">-3.41</string>
    <string name="_1d">1D</string>
    <string name="_5d">5D</string>
    <string name="_1m">1M</string>
    <string name="_1y">1Y</string>
    <string name="_5y">5Y</string>
    <string name="open">Open</string>
    <string name="previous_close">Previous Close</string>
    <string name="_52_week_high">52 week high</string>
    <string name="_52_week_low">52 week low</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="market_cap">Market cap</string>
    <string name="price_earning_ratio">Price/Earning ratio</string>
    <string name="placeholder_open">84.74</string>
    <string name="placeholder_prevClose">86.51</string>
    <string name="placeholder_52high">94.28</string>
    <string name="placeholder_52low">28.82</string>
    <string name="stockHigh">85.72</string>
    <string name="placeholder_stockLow">82.35</string>
    <string name="placeholder_marketcap">97.56B</string>
    <string name="placeholder_stockPe">252.58</string>
    <string name="stock_arrow">Stock arrow</string>
    <string name="placeholderLongMessage">Stock price over 80.9 Stock price over 80.9 Stock price over 80.9 Stock price over 80.9 Stock price over 80.9 Stock price over 80.9 Stock price over 80.9</string>
    <string name="placeholderDate">2020.10.10 10:36</string>
    <string name="newBadge">New</string>
    <string name="over">Over</string>
    <string name="under">Under</string>
    <string name="priceCapitalized">Price</string>
    <string name="price">price</string>
    <string name="usd">USD</string>
    <string name="_85_30">85.30</string>
    <string name="remove_this_stock">Remove this stock</string>
    <string name="stonk_logo">Stonk logo</string>
    <string name="stonks_logo">Stonks Logo</string>
    <string name="remove_this_reminder">Remove this reminder</string>
    <string name="error_downloading_stock_data">Couldn\'t load data</string>
    <string name="news">News</string>
    <string name="recent">Recent</string>
    <string name="none">None</string>
    <string name="news_item_placeholder_title">Amd stock is nice</string>
    <string name="news_author_placeholder_text">Abcd edf</string>
    <string name="placeholderUrl">http://thisisawebsite.com/thisarticle</string>
    <string name="dots" tools:ignore="TypographyEllipsis">...</string>
    <string name="remind_at">Remind at:</string>
    <string name="currently">Currently:</string>
</resources>