<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_stock_scene">

    <TextView
        android:id="@+id/stockCodeSymbolText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/stock_symbol_background"
        android:text="@string/placeholderSymbol"
        android:textAlignment="center"
        android:textAllCaps="true"
        app:layout_constraintEnd_toStartOf="@+id/stockCompanyName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stockCompanyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/placeholderCompanyName"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/stockCodeSymbolText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stockCodeSymbolText"
        app:layout_constraintTop_toTopOf="@+id/stockCodeSymbolText"
        android:maxLines="1"
        android:ellipsize="end"
        android:maxWidth="300dp"
        app:layout_constraintWidth_max="wrap"/>

    <TextView
        android:id="@+id/stockPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/placeholder_price"
        android:textColor="@color/stockDownRed"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stockCompanyName" />

    <TextView
        android:id="@+id/stockPercentChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="2dp"
        android:text="@string/placeholder_percent"
        android:textColor="@color/stockDownRed"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/stockPrice"
        app:layout_constraintStart_toEndOf="@+id/stockPrice" />

    <TextView
        android:id="@+id/stockPriceChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/placeholder_change"
        android:textColor="@color/stockDownRed"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/stockPrice"
        app:layout_constraintTop_toTopOf="@+id/stockPrice" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/stockTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stockLineChart"
        app:tabIndicatorFullWidth="false"
        tools:layout_editor_absoluteY="667dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1d" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5d" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1m" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1y" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5y" />
    </com.google.android.material.tabs.TabLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/stockLineChart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

    </com.github.mikephil.charting.charts.LineChart>





    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/circularProgressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cpb_indeterminate_mode="true"
        app:cpb_background_progressbar_color="@color/transparent"
        app:cpb_progressbar_color="@color/colorPrimary"
        app:cpb_progressbar_width="3dp"
        app:cpb_round_border="true"
        app:cpb_progress_direction="to_right"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stockPrice">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/open"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/previous_close"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_52_week_high"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_52_week_low"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/high"
            app:layout_constraintStart_toStartOf="@id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/market_cap"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <TextView
            android:id="@+id/stockEarningRatio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_earning_ratio"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/textView10" />

        <TextView
            android:id="@+id/stockOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/placeholder_open"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/stockPrevClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_prevClose"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/stockOpen"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <TextView
            android:id="@+id/stock52high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_52high"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/stockPrevClose"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <TextView
            android:id="@+id/stock52low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_52low"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/stock52high"
            app:layout_constraintTop_toTopOf="@+id/textView10" />

        <TextView
            android:id="@+id/stockHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/stockHigh"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/stockLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_stockLow"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/stockHigh"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <TextView
            android:id="@+id/stockMarketCap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_marketcap"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/stockHigh"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <TextView
            android:id="@+id/stockPpE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_stockPe"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/stockHigh"
            app:layout_constraintTop_toTopOf="@+id/textView10" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/showReminderDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/buttonColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_round_notifications_24"
        app:tint="@color/white"/>

</androidx.constraintlayout.motion.widget.MotionLayout>