<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.zoliabraham.stonks.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_stock"
            app:destination="@id/navigation_stock"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
    </fragment>

    <fragment
        android:id="@+id/navigation_stocklist"
        android:name="com.zoliabraham.stonks.ui.stocklist.StockListFragment"
        android:label="@string/title_stocklist"
        tools:layout="@layout/fragment_stocklist" >
        <action
            android:id="@+id/action_navigation_stocklist_to_navigation_stock"
            app:destination="@id/navigation_stock"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:launchSingleTop="false"
            app:popEnterAnim="@android:anim/fade_in"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.zoliabraham.stonks.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_stock"
            app:destination="@id/navigation_stock"
            app:enterAnim="@android:anim/fade_in"
            app:launchSingleTop="false"
            app:popEnterAnim="@android:anim/fade_in"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_stock"
        android:name="com.zoliabraham.stonks.ui.stock.StockFragment"
        android:label="@string/title_stock"
        tools:layout="@layout/fragment_stock" >
        <argument
            android:name="stockDataJson"
            app:argType="string" />
    </fragment>
</navigation>