<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginHorizontal="4dp"
    android:foreground="?android:attr/selectableItemBackground">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_round_trending_up_24"
            android:contentDescription="@string/stock_arrow" />

        <TextView
            android:id="@+id/symbolText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/stock_symbol_background"
            android:text="@string/placeholderSymbol"
            android:textAlignment="center"
            android:textAllCaps="true"
            app:layout_constraintStart_toEndOf="@+id/iconImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/companyNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/placeholderCompanyName"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/symbolText"
            app:layout_constraintStart_toEndOf="@+id/symbolText"
            app:layout_constraintTop_toTopOf="@+id/symbolText" />

        <TextView
            android:id="@+id/messageText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/placeholderLongMessage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dateText"
            app:layout_constraintStart_toStartOf="@+id/symbolText"
            app:layout_constraintTop_toBottomOf="@+id/companyNameText" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".1" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/placeholderDate"
            android:textColor="@color/stockDateTextColor"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/messageText"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/newNotificationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/new_badge_background"
            android:text="@string/newBadge"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/companyNameText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/companyNameText"
            tools:ignore="SmallSp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>