<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    app:cardBackgroundColor="@color/transparent"
    app:cardCornerRadius="4dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/newsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/news_item_placeholder_title"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/newsAuthor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/newsAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxLength="100"
            android:text="@string/news_author_placeholder_text"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/newsTitle"
            app:layout_constraintTop_toBottomOf="@+id/newsTitle"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/newsUrl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/placeholderUrl"
            android:textColor="@color/dismissGray"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/newsAuthor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/newsAuthor"
            app:layout_constraintTop_toTopOf="@+id/newsAuthor"
            tools:ignore="SmallSp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>